k8s/auth-microservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authorization-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authorization-service
  template:
    metadata:
      labels:
        app: authorization-service
    spec:
      containers:
        - name: authorization-service
          image: devwithsmile/generic-authorization-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9999
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 512Mi
              cpu: 250m
---
apiVersion: v1
kind: Service
metadata:
  name: authorization-service
  namespace: dev
spec:
  selector:
    app: authorization-service
  ports:
  - port: 9999
    targetPort: 9999
