k8s/service-registry-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: service-registry
  namespace: dev
spec:
  serviceName: "service-registry"
  replicas: 1
  selector:
    matchLabels:
      app: service-registry
  template:
    metadata:
      labels:
        app: service-registry
    spec:
      containers:
        - name: service-registry
          image: devwithsmile/generic-discovery-server
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8761
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: service-registry
  namespace: dev
spec:
  selector:
    app: service-registry
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
  clusterIP: None # Headless, because it's used by StatefulSet
